test/tests/stages/5_local_variables/valid/use_assignment_result.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[24]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(1)
  ;
  int
  identifier(b)
  =
  const int(2)
  ;
  return
  identifier(a)
  =
  identifier(b)
  =
  const int(4)
  ;
  }
