test/tests/stages/5_local_variables/invalid_semantics/redefine.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(1)
  ;
  int
  identifier(a)
  =
  const int(2)
  ;
  return
  identifier(a)
  ;
  }
